k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ontop-aether
  labels:
    app.kubernetes.io/part-of: ontop-aether
